# SlicerFootSegmentation

./: CMakeLists.txt  FootSegmentation.s4ext  LICENSE  README.md
FootSegmentation/: CMakeLists.txt  FootSegmentation.py
